# sparse-attention-hub

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE_COMPLIANCE.md  LICENSE  Makefile  README.md  masker_structure_summary.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_e2e_demo.py  test_implementation.py  test_sdpa_integration.py
.cursor/rules/: conda_env.mdc  defensive-coding.mdc  doctstring-python.mdc  linting.mdc  python-type-annotations.mdc  tests.mdc  type-annotations.mdc
.github/: .pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_issue.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: baseline.md
.github/workflows/: ci.yml
benchmark/: README.md  __init__.py  base.py  benchmark_registry.py  demo_optimized_benchmarks.py  executor.py  executor_config.py  get_cached_config.py  hyperparameter_optimization.py  optimized_executor.py  run_optimized_benchmarks.py
benchmark/AIME2024/: __init__.py  aime2024.py  calculate_metrics.py  create_huggingface_dataset.py  test_aime2024.py
benchmark/AIME2025/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  aime2025.py  calculate_metrics.py  create_huggingface_dataset.py  example_usage.py  test_aime2025.py
benchmark/infinite_bench/: README.md  __init__.py  calculate_metrics.py  create_huggingface_dataset.py  infinite_bench.py
benchmark/longbench/: README.md  __init__.py  calculate_metrics.py  create_huggingface_dataset.py  longbench.py
benchmark/longbenchv2/: README.md  __init__.py  calculate_metrics.py  create_huggingface_dataset.py  longbenchv2.py
benchmark/loogle/: README.md  __init__.py  calculate_metrics.py  create_huggingface_dataset.py  loogle.py
benchmark/mock_benchmark/: README.md  __init__.py  mock_benchmark.py
benchmark/optimizer/: README.md  __init__.py  demo_loogle_asha.py  generic_config_optimizer.py  hyperparameter_optimization.py  optimized_executor.py  run_full_benchmark.py  simple_optimizer.py
benchmark/raytune/: OPTIMIZATION_EXPERIMENT.py  README.md  advanced_benchmark_analysis.py  analyze_trials.py  benchmark_helper.py  create_specific_plots.py  generic_config_optimizer.py  list_benchmark_tasks.py  optimizer_factory.py  run_config_dir.py  run_full_benchmark.py  run_full_benchmark_interleave.py  run_optimize_configs.py  run_ray_benchmarks.py  run_two_phase_benchmark.py  search_manager.py  test_phase1_objectives.py  utility.py  visualize_benchmark_results.py  visualize_error_vs_density.py
benchmark/ruler/: README.md  __init__.py  (+2 more)
cursor_chats/: 5ce266737be10389cdcc52b363bf904d8acc9b13_86d747c19745780ee2568a53c5cbdb29b4455d7f.md  693f90f5bc48b07ac34e0d398e3c1465e8afb434_1.md  693f90f5bc48b07ac34e0d398e3c1465e8afb434_2.md  693f90f5bc48b07ac34e0d398e3c1465e8afb434_3.md  69fea82bf731fef34a38cd8c9fc97be34441f3c3_1.md  69fea82bf731fef34a38cd8c9fc97be34441f3c3_2.md  7d79f074a2db57c5c4ee208a7f2a4edb6464c8d1_1.md  7d79f074a2db57c5c4ee208a7f2a4edb6464c8d1_2.md  9c2cc7ed15799f6a15c5f5379ee28d29e2271623_1.md  9c2cc7ed15799f6a15c5f5379ee28d29e2271623_2.md  ab5569d773cf6a9c7dc90fa7d142d1ae216c6ce0_1.md  ab5569d773cf6a9c7dc90fa7d142d1ae216c6ce0_2.md  ded8a2a4876f526378b67861c45b6b03bd62052c_1.md  ded8a2a4876f526378b67861c45b6b03bd62052c_2.md
docs/: ORACLE_TOPK_PERFORMANCE_ANALYSIS.md  PERFORMANCE_RESULTS.md  architecture_plantuml.txt  modelhub_hf_registration.md
examples/: basic_usage.py  modelhub_hf_registration_example.py
open_evolve_masker/: README.md  config.yaml  config_phase2.1.yaml  config_phase2.yaml  evaluator.py  extract_openevolve_code.py
openhands_chats/: feature-complete-architecture-implementation.md
profile/: README.md  profile_kmeans_batched.py  profile_research_attention.py
scripts/: analyze_attention_dump.py  format.sh  lint.sh  run_tests.py
sparse_attention_hub/: __init__.py
test_results/: config.json  metrics.json  micro_metrics.jsonl  raw_results.csv
test_results.5cpt.topk.2/: config.json  metrics.json  raw_results.csv
tests/: README.md  __init__.py  conftest.py
(+489 files in other folders)
